--- a/package.json
+++ b/package.json
@@ -15,6 +15,8 @@
     "next": "14.1.4",
     "react": "^18",
     "react-dom": "^18",
+    "react-router-dom": "^6.22.3",
+    "react-toastify": "^10.0.5",
     "sass": "^1.72.0",
     "zustand": "^4.5.2"
   },
