--- a/package.json
+++ b/package.json
@@ -18,12 +18,15 @@
     "react-router-dom": "^6.22.3",
     "react-toastify": "^10.0.5",
     "sass": "^1.72.0",
+    "uuid": "^9.0.1",
+    "xlsx": "^0.18.5",
     "zustand": "^4.5.2"
   },
   "devDependencies": {
     "@types/node": "^20",
     "@types/react": "^18",
     "@types/react-dom": "^18",
+    "@types/uuid": "^9.0.8",
     "autoprefixer": "^10.0.1",
     "eslint": "^8",
     "eslint-config-next": "14.1.4",
