--- a/package.json
+++ b/package.json
@@ -10,11 +10,16 @@
   },
   "dependencies": {
     "@ant-design/icons": "^5.3.6",
+    "@tanstack/react-query": "^5.32.1",
     "antd": "^5.16.0",
     "axios": "^1.6.8",
+    "date-fns": "^3.6.0",
+    "dayjs": "^1.11.11",
+    "moment": "^2.30.1",
     "next": "14.1.4",
     "react": "^18",
     "react-dom": "^18",
+    "react-hook-form": "^7.51.3",
     "react-router-dom": "^6.22.3",
     "react-toastify": "^10.0.5",
     "sass": "^1.72.0",
@@ -30,6 +35,7 @@
     "autoprefixer": "^10.0.1",
     "eslint": "^8",
     "eslint-config-next": "14.1.4",
+    "eslint-plugin-react-hooks": "^4.6.0",
     "postcss": "^8",
     "tailwindcss": "^3.3.0",
     "typescript": "^5"
