--- a/package.json
+++ b/package.json
@@ -23,6 +23,7 @@
     "react-router-dom": "^6.22.3",
     "react-toastify": "^10.0.5",
     "sass": "^1.72.0",
+    "usehooks-ts": "^3.1.0",
     "uuid": "^9.0.1",
     "xlsx": "^0.18.5",
     "zustand": "^4.5.2"
